--- a/DJANGOUNCHAINED/app_testing/src/config/config.yaml
+++ b/DJANGOUNCHAINED/app_testing/src/config/config.yaml
@@ -1,4 +1,13 @@
 # Escenario base: Incluir geojson con matriz OD de santiago, calculado anteriormente.
-base_scenario_geojson_path: r"C:\Users\pablo\Escritorio\EL6101-Proyecto_Tecno\data_manipulation\GeoJSON_With_Viajes.geojson"
+base_scenario_geojson_path: C:\Users\pablo\Escritorio\EL6101-Proyecto_Tecno\DJANGOUNCHAINED\app_testing\app_files\Matriz_OD_BASE_COMUNAS.geojson
 
+# Directorios
+output_directory: C:\Users\pablo\Escritorio\EL6101-Proyecto_Tecno\DJANGOUNCHAINED\app_testing\app_files
+
+# Configuracion de ejecucion
+request_yaml: C:\Users\pablo\Escritorio\EL6101-Proyecto_Tecno\DJANGOUNCHAINED\app_testing\src\requests\calculation_request_1.yaml
+building_templates_yaml: C:\Users\pablo\Escritorio\EL6101-Proyecto_Tecno\DJANGOUNCHAINED\app_testing\src\config\building_templates.yaml
+caracterizacion_comunas_yaml: C:\Users\pablo\Escritorio\EL6101-Proyecto_Tecno\DJANGOUNCHAINED\app_testing\src\config\caracterizacion_comunas.yaml
+
+debugging: False
 
