Location Graphing Done

--- a/DJANGOUNCHAINED/app_testing/src/requests/calculation_request_1.yaml
+++ b/DJANGOUNCHAINED/app_testing/src/requests/calculation_request_1.yaml
@@ -1,7 +1,11 @@
 requests:
-  - ["mall", [-33.45156751527478, -70.68407324203322]]
-  - ["parque_grande", [-33.45156751527478, -70.68407324203322]]
-  - ["complejo_apartamentos", [-33.45156751527478, -70.68407324203322]]
+  # mall en cerrillos
+  - ["mall", [-33.513095118682564, -70.71358651739897]]
+
+  - ["parque_grande", [-33.487635117519815, -70.6499540242124]]
+  - ["parque_grande", [-33.51925537590555, -70.69282422359473] ]
+
+  - ["complejo_apartamentos", [-33.54804886998097, -70.60231870959045]]
 
 
 # Que quede un timestamp de la request, algo asi
