switching to json

--- a/DJANGOUNCHAINED/app_testing/src/config.yaml
+++ b/DJANGOUNCHAINED/app_testing/src/config.yaml
@@ -1,13 +1,13 @@
 # Escenario base: Incluir geojson con matriz OD de santiago, calculado anteriormente.
-base_scenario_geojson_path: C:\Users\pablo\Escritorio\EL6101-Proyecto_Tecno\DJANGOUNCHAINED\app_testing\app_files\Matriz_OD_BASE_COMUNAS.geojson
+base_scenario_geojson_path: /home/winkrobed/Proyecto_Tecno/DJANGOUNCHAINED/app_testing/app_files/Matriz_OD_BASE_COMUNAS.geojson
 
 # Directorios
-output_directory: C:\Users\pablo\Escritorio\EL6101-Proyecto_Tecno\DJANGOUNCHAINED\app_testing\app_files
+output_directory: /home/winkrobed/Proyecto_Tecno/DJANGOUNCHAINED/app_testing/app_files
 
 # Configuracion de ejecucion
-request_yaml: C:\Users\pablo\Escritorio\EL6101-Proyecto_Tecno\DJANGOUNCHAINED\app_testing\src\requests\calculation_request_1.yaml
-building_templates_yaml: C:\Users\pablo\Escritorio\EL6101-Proyecto_Tecno\DJANGOUNCHAINED\app_testing\src\config\building_templates.yaml
-caracterizacion_comunas_yaml: C:\Users\pablo\Escritorio\EL6101-Proyecto_Tecno\DJANGOUNCHAINED\app_testing\src\config\caracterizacion_comunas.yaml
+request_yaml: /home/winkrobed/Proyecto_Tecno/DJANGOUNCHAINED/app_testing/src/requests/calculation_request_1.yaml
+building_templates_yaml: /home/winkrobed/Proyecto_Tecno/DJANGOUNCHAINED/app_testing/src/config/building_templates.yaml
+caracterizacion_comunas_yaml: /home/winkrobed/Proyecto_Tecno/DJANGOUNCHAINED/app_testing/src/config/caracterizacion_comunas.yaml
 
 debugging: False
 
